@@ -1,3 +1,9 @@
+Tue Dec  3 12:10:21 2013  Aman Gupta <ruby@tmm1.net>
+
+	* string.c (rb_fstring): Use st_update instead of st_lookup +
+	  st_insert.
+	* string.c (fstr_update_callback): New callback for st_update.
+
 Tue Dec  3 10:43:58 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* ext/openssl/lib/openssl/buffering.rb:  Return ASCII-8BIT strings from
